# rag-genai-api

./: .env.example  README.md  aggregator.py  architecture_diagram.drawio  learning.md  pyproject.toml  questions.md  source_code.md  test.py
samples/: electronic.xlsx  machine_setups.csv  resume.docx  roles.txt  sample_questions.md
src/: main.py  util.py
src/ingest/: __init__.py  cache.py  components.py  config.py  executor.py  pipeline.py  selector.py  util.py
src/query/: pipeline.py
